Frontend/content/css/components.css
/* ... */
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md-block {
    display: block !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md-inline {
    display: inline !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md-inline-block {
    display: inline-block !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg {
    display: block !important;
  }
  table.visible-lg {
    display: table !important;
  }
  tr.visible-lg {
    display: table-row !important;
  }
  th.visible-lg,
  td.visible-lg {
    display: table-cell !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg-block {
    display: block !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg-inline {
    display: inline !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg-inline-block {
    display: inline-block !important;
  }
}
@media (max-width: 767px) {
  .hidden-xs {
    display: none !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .hidden-sm {
    display: none !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .hidden-md {
    display: none !important;
  }
}
@media (min-width: 1200px) {
  .hidden-lg {
    display: none !important;
  }
}
.visible-print {
  display: none !important;
}
@media print {
  .visible-print {
    display: block !important;
  }
  table.visible-print {
    display: table !important;
  }
  tr.visible-print {
    display: table-row !important;
  }
  th.visible-print,
  td.visible-print {
    display: table-cell !important;
  }
}
.visible-print-block {
  display: none !important;
}
@media print {
  .visible-print-block {
    display: block !important;
  }
}
.visible-print-inline {
  display: none !important;
}
@media print {
  .visible-print-inline {
    display: inline !important;
  }
}
.visible-print-inline-block {
  display: none !important;
}
@media print {
  .visible-print-inline-block {
    display: inline-block !important;
  }
}
@media print {
  .hidden-print {
    display: none !important;
  }
}
/*# sourceMappingURL=bootstrap.css.map */
/*! Customisations */
/*! Bootstrap */
html {
  height: 100%;
}
body {
  -webkit-user-select:      none;
     -moz-user-select: -moz-none;
      -ms-user-select:      none;
       -o-user-select:      none;
          user-select:      none;

  -webkit-touch-callout: none;
   -khtml-user-select:      none;
}
#logo {
  height: 45px;
  max-height: 45px;
  padding: 5px 12px 0 0;
}
.page {
  display: none;
}
.dropdown-menu > li > a {
  line-height: 35px;
}
.navbar-nav > li.active {
  background: #060606;
}
.navbar-right {
  padding-right: 15px;
}
.gap {
  margin-top: 20px;
}
.alert > span.label {
  float: right;
  margin-bottom: 5px;
  margin-left: 5px;
}
.btn > span.label,
.nav-pills > li > a > span.label {
  margin-left: 5px;
}
.alert.label-default .btn-default,
.alert.label-default > span.label.label-default,
.btn.btn-default > span.label.label-default {
  background-color: #342b2b;
  border-color: #342b2b;
}
.alert.label-primary .btn-primary,
.alert.label-primary > span.label.label-primary,
.btn.btn-primary > span.label.label-primary {
  background-color: #0048f0;
  border-color: #0048f0;
}
.alert.label-success .btn-success,
.alert.label-success > span.label.label-success,
.btn.btn-success > span.label.label-success {
  background-color: #1e9111;
  border-color: #1e9111;
}
.alert.label-info .btn-info,
.alert.label-info > span.label.label-info,
.btn.btn-info > span.label.label-info {
  background-color: #098db4;
  border-color: #098db4;
}
.alert.label-warning .btn-warning,
.alert.label-warning > span.label.label-warning,
.btn.btn-warning > span.label.label-warning {
  background-color: #ba7900;
  border-color: #ba7900;
}
.alert.label-danger .btn-danger,
.alert.label-danger > span.label.label-danger,
.btn.btn-danger > span.label.label-danger {
  background-color: #c11600;
  border-color: #c11600;
}
.alert a.btn {
  text-decoration: none;
}
.alert > .btn,
.alert > .btn-group {
  float: right;
  margin-bottom: 5px;
  margin-left: 15px;
}
.alert-mini {
  min-height: 55px;
  margin-bottom: 20px;
}
.alert-mini[data-nav] {
  cursor: pointer;
}
.nav-pills > li > a.active > span.label.label-primary {
  background-color: #0048f0;
  border-color: #0048f0;
}
.btn-select,
.btn-select > button,
.btn-select > ul.dropdown-menu {
  width: 100%;
}
.btn-select > button {
  text-align: right;
}
.btn-select > button > span:first-child {
  float: left;
}
.meter {
  position: relative;
  display: inline-block;
  height: 120px;
  margin-bottom: 20px;
}
.meter p {
  margin: 0;
  text-align: center;
}
.meter > div {
  position: relative;
  display: inline-block;
  width: 30px;
  height: 100px;
}
.meter > div > div {
  position: absolute;
  display: block;
  width: 30px;
}
.meter div.base {
  position: absolute;
  display: block;
  width: 30px;
  height: 100px;
  border-radius: 4px;
}
.meter div.bar {
  clip: rect(100px, 30px, 100px, 0px);
}
.meter div.bar > div:first-child {
  height: 10px;
  border-radius: 4px 4px 0 0;
}
.meter div.bar > div:first-child + div {
  height: 20px;
}
.meter div.bar > div:first-child + div + div {
  height: 70px;
  border-radius: 0 0 4px 4px;
}
input[type=range] {
  width: 100%;
  height: 40px;
  -webkit-appearance: none;
  padding: 0;
  background: #424242;
  border: 1px solid #424242;
  border-radius: 4px;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 40px;
  background: #424242;
  border: none;
  border-radius: 4px;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 40px;
  padding: 0;
  background: #424242;
  border: none;
  border-radius: 4px;
}
input[type=range]::-webkit-slider-thumb {
  width: 40px;
  height: 40px;
  -webkit-appearance: none;
  background: #2ca71e;
  border: none;
  border-radius: 4px;
}
input[type=range]::-moz-range-thumb {
  width: 40px;
  height: 40px;
  background: #2ca71e;
  border: none;
  border-radius: 4px;
}
/* ... */

